# whoop-alternative

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  FLUTTER_TESTING_GUIDE.md  GITHUB_SETUP.md  INTEGRATION_SUMMARY_0509.md  LICENSE  README.md  SIGNAL_FLOW.md  UPPER_ARM_MIGRATION_RESULTS.md  test_wrist_artifacts.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/mobile/: README.md  pubspec.yaml
app/mobile/lib/: main.dart
app/mobile/test/: widget_test.dart
app/mobile/web/: index.html  manifest.json
docs/: README.md
firmware/: ADVANCED_OPTIMIZATIONS.md  Makefile  README.md  SENSOR_ARCHITECTURE.md  analyze_ppg.py  interactive_ppg_test.sh  test_architecture.sh
firmware/app/: CMakeLists.txt  prj.conf
firmware/app/src/: app_config.h  app_states.h  main.c
firmware/config/: sensor_config.txt
firmware/drivers/: sensor_manager.c  sensor_manager.h
firmware/drivers/imu/: bma400.h
firmware/drivers/interfaces/: ble_service_interfaces.h  config_hotreload_interfaces.h  power_interfaces.h  sensor_config.h  sensor_interfaces.h  signal_pipeline_interfaces.h  storage_interfaces.h
firmware/drivers/ppg/: max30101_driver.c  max30101_driver.h  (+3 more)
firmware/tests/: health_host_test.c  health_test_app.c  imu_final_test.c  imu_test_app.c  ppg_host_test.c  ppg_simulator_host.h  ppg_test_app.c  sensor_abstraction_test.c
hardware/: README.md  design-overview.md
hardware/schematics/: pcb_layout_guide.md  prototype_schematic.md  schematic_diagram.md
(+37 files in other folders)
